<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activitys.MainActivity">

    <com.ornach.nobobutton.NoboButton
        android:id="@+id/btnPerfil"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:nb_backgroundColor="@color/tres"
        app:nb_borderColor="@color/branco"
        app:nb_borderWidth="0dp"
        app:nb_focusColor="@color/colorAccent"
        app:nb_radius="40dp"
        app:nb_text="@string/btnPerfil"
        app:nb_textColor="@color/branco"
        app:nb_textSize="20sp"
        app:nb_textStyle="bold" />

    <com.ornach.nobobutton.NoboButton
        android:id="@+id/btnGerarFolhaPagamento"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPerfil"
        app:nb_backgroundColor="@color/cinco"
        app:nb_borderColor="@color/branco"
        app:nb_borderWidth="0dp"
        app:nb_focusColor="@color/colorAccent"
        app:nb_radius="40dp"
        app:nb_text="@string/btnGerarFolhaPagamento"
        app:nb_textColor="@color/branco"
        app:nb_textSize="20sp"
        app:nb_textStyle="bold" />

    <com.ornach.nobobutton.NoboButton
        android:id="@+id/btnConsultarFolhaPagamento"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGerarFolhaPagamento"
        app:nb_backgroundColor="@color/dois"
        app:nb_borderColor="@color/branco"
        app:nb_borderWidth="0dp"
        app:nb_focusColor="@color/colorAccent"
        app:nb_radius="40dp"
        app:nb_text="@string/btnConsultarFolhaPagamento"
        app:nb_textColor="@color/branco"
        app:nb_textSize="20sp"
        app:nb_textStyle="bold" />

    <com.ornach.nobobutton.NoboButton
        android:id="@+id/btnSair"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConsultarFolhaPagamento"
        app:nb_backgroundColor="@android:color/transparent"
        app:nb_borderColor="@color/colorPrimary"
        app:nb_borderWidth="2dp"
        app:nb_focusColor="@color/colorPrimary"
        app:nb_radius="40dp"
        app:nb_text="@string/btnSair"
        app:nb_textColor="@color/colorPrimary"
        app:nb_textSize="20sp"
        app:nb_textStyle="bold" />

</androidx.constraintlayout.widget.ConstraintLayout>